--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<p>hello!</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>EROS-5</title>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-100">
+                <h1>
+                    EROS-5
+                </h1>
+                <h3>
+                    Gerador Sintético de carga de trabalho para ambientes 5G
+                </h3>
+                
+                <h2>
+                    O que é?
+                </h2>
+                <p>
+                    EROS-5 é uma ferramenta de geração de carga de trabalho sintético para redes de computadores.
+                    O objetivo principal da ferramenta é prover cargas representativas de aplicações reais e facilitar
+                    o processo de geração através do uso de variáveis aleatórias que descrevem o comportamento 
+                </p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
