--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </header>
         <div class="row">
-            <div class="col-100">
+            <div class="col-100 pb-20">
                 <h3>
                     Gerador Sintético de carga de trabalho para ambientes 5G
                 </h3>
@@ -191,7 +191,7 @@
                 <h2>
                     Video Explicativo
                 </h2>
-                <a href=""></a>
+                <a href="https://youtu.be/hhOzjerD_9w">Video no YouTube</a>
             </div>
         </div>
     </div>
